it works like a dream! let's get this beauty styled and submitted!

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="wins-losses">
-        <div class="wins">wins:</div>
+        <div class="wins">Wins:</div>
         <div class="losses">Losses:</div>
     </div>
     <!-- four pictures of crystals that act as buttons/inputs -->
