game is done, not sure if it needs to be responsive

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 
 <body>
-    <h1>Krystal Klicker!</h1>
+    <h1 class="title">Crystal Clicker!</h1>
 
-    <h2>Rules:</h2>
-    <ol>
-        <li>Your goal is to reach the number displayed under 'Target Number'</li>
-        <li>Use your mouse to click on one of the four crystals below. Each one will give you a different number of
+    <h2 class="rules">Rules:</h2>
+    <ol class="list">
+        <li>1. Your goal is to reach the number displayed under 'Target Number'</li>
+        <li>2. Use your mouse to click on one of the four crystals below. Each one will give you a different number of
             points.</li>
-        <li>Click each of the crystals, and use their values to reach the 'Target Number' but take care not to go over
+        <li>3. Click each of the crystals, and use their values to reach the 'Target Number' but take care not to go over
             it!</li>
     </ol>
     <!-- random number in the middle that will be randomly chosen when game starts -->
